parser/tests/snapshots/errors__emit_no_args.snap
---
source: parser/tests/errors.rs
expression: err

---
error: unexpected end of file
  ┌─ emit_no_args:1:7
  │
1 │ emit x
  │       ^


